--- a/Color.css
+++ b/Color.css
@@ -1,5 +1,7 @@
 body {
     background-color: #232323;
+    margin: 0;
+    font-family: "montserrat", "Avanir";
 }
 .square{
 
@@ -8,6 +10,14 @@ body {
     padding-bottom: 30%;
     float: left; 
     margin: 1.66%;
+    border-radius: 50%;
+    transition: background 0.9s;
+    -webkit-transition: all 0.9s;
+    
+}
+
+#colorDisplay{
+    font-size: 250%;
 }
 
 #container{
@@ -17,6 +27,30 @@ body {
 h1{
     color: white;
     text-align: center;
+    background: steelblue;
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    line-height: 1.1;
+    padding: 20px 0;
+}
+
+button{
+border: none;
+background: none;
+text-transform: uppercase;
+height: 100%;
+font-weight: 700;
+color:steelblue;
+letter-spacing: 1px;
+font-size: inherit;
+transition: all 0.5s;
+
+
+}
+button:hover{
+    color: white;
+    background: steelblue;
 }
 
 #stripe{
@@ -27,5 +61,9 @@ h1{
 }
 .selected{
 
-    color: blue;
+    color: red;
+}
+#message{
+    display: inline-block;
+    width: 20%;
 }
